frontend: Add new api for compiling to VIAM and AST